--- a/Engima Presentation.ipynb
+++ b/Engima Presentation.ipynb
@@ -105,7 +105,10 @@
     }
    },
    "source": [
-    "### The Data Frame:"
+    "### The Data Frame:\n",
+    "\n",
+    "* In SQL:\n",
+    "    ``` use df; select top * from df; ``` "
    ]
   },
   {
@@ -2409,7 +2412,9 @@
    },
    "source": [
     "## Creating sub-tables out of results\n",
-    "* Simply assign the results to a new variable"
+    "* Simply assign the results to a new variable\n",
+    "* In SQL:\n",
+    "    ``` select a.exitPagePath as exit, sum(a.entrances) as entrances from df as a group by exit ```"
    ]
   },
   {
